--- a/recipe.html
+++ b/recipe.html
@@ -85,7 +85,7 @@
     <span>Ganzes Jahr</span>,
     <span>Sommer</span>,
     <span>Herbst</span>,
-    <span>Frühling</span>,
+    <span>Frühlingg</span>,
     <span>Winter</span>,
     <span>Schnell/einfach</span>,
     <span>Ohne Fleisch</span>
